src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Calificacion2__c</fullName>
        <label>Calificación DWP EU</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuantosautoshayentufamilia__c</fullName>
        <description>Información para la campaña.</description>
        <label>¿Cuántos autos hay en tu familia?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 o mas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CuantosAutostienes__c</fullName>
        <description>Campo con información para campaña.</description>
        <label>Cuantos Autos tienes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_Polizas__c</fullName>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cuenta Pólizas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CuentaAnteriorUltimosDigitos__c</fullName>
        <description>4 últimos dígitos de la tarjeta a la que se carga la póliza</description>
        <label>Cuenta anterior últimos digitos</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuentacondispositivo__c</fullName>
        <description>Campo con información para evaluación de cliente.</description>
        <label>Cuenta con dispositivo satelital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CuentaDispositivoAndroid__c</fullName>
        <description>Evaluación de información de cliente.</description>
        <label>¿Cuenta con dispositivo Android?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegacionBenef__c</fullName>
        <label>Delegación</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegacionMunicipioCliente__c</fullName>
        <description>Delegación / municipio del asegurado.</description>
        <label>Delegación/Municipio Asegurado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_y_comentarios__c</fullName>
        <description>En este espacio describe brevemente que necesidad tiene tu cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>En este espacio describe brevemente que necesidad tiene tu cliente</inlineHelpText>
        <label>Descripción y comentarios</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descuento_Cupones__c</fullName>
        <description>Campo para información financiera.</description>
        <label>Descuento Cupones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descuento_Facultado__c</fullName>
        <description>Campo para información financiera.</description>
        <label>Descuento Facultado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                    <default>true</default>
                    <label>0%</label>
                </value>
                <value>
                    <fullName>3%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>7%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DESCUENTO_FACULTADO_CLIPERT__c</fullName>
        <description>Campo para Cotización.</description>
        <label>Descuento facultado Clipert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnostico_ciclo_de_compra_del_cliente__c</fullName>
        <label>Diagnóstico ciclo de compra del cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reconocer necesidad</fullName>
                </value>
                <value>
                    <fullName>Evaluar opciones</fullName>
                </value>
                <value>
                    <fullName>Resolver preocupaciones sobre la compra</fullName>
                </value>
                <value>
                    <fullName>Tomar la decisión</fullName>
                </value>
                <value>
                    <fullName>Implementar la compra</fullName>
                </value>
                <value>
                    <fullName>Evaluar los resultados después de la compra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dias_desde_ultimo_uso__c</fullName>
        <description>Dias que han transcurrido desde la fecha de ultimo uso del dispositvo.</description>
        <formula>today() -  Fecha_de_ultimo_uso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días desde último uso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direccion_envio_VIT__c</fullName>
        <description>Dirección a la que será enviada el VIT, proceso de cool drive</description>
        <label>Dirección envío VIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_Facturacion__c</fullName>
        <label>Dirección de Facturación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DireccionCliente__c</fullName>
        <description>Campo de dirección del asegurado.</description>
        <label>Dirección Asegurado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DireccionContratante__c</fullName>
        <description>Dirección del contratante.</description>
        <formula>if(ISBLANK(Account.BillingStreet)==FALSE, Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;if(LEN(Account.Colonia__c)&gt;0, &quot;Col. &quot;&amp;Account.Colonia__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; if(LEN(Account.Delegacion__c)&gt;0, &quot;Población &quot;&amp;Account.Delegacion__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; if(ISBLANK(Account.BillingCity)==FALSE, Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp; if(LEN(Account.BillingState)&gt;0, &quot;Estado &quot;&amp;Account.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp; BR() &amp; if(LEN(Account.BillingPostalCode)&gt;0, &quot;CP &quot;&amp;Account.BillingPostalCode,&quot;&quot;) &amp; BR() &amp; If(LEN( Account.BillingCountry) &gt;0, Account.BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección del Contratante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>División</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <formula>TEXT(Owner.Divisi_n__c)</formula>
        <label>División Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_de_documentacion__c</fullName>
        <label>Estado de documentación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completo</fullName>
                </value>
                <value>
                    <fullName>Incompleto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donde_lo_estacionas__c</fullName>
        <description>Campo para evaluación del cliente.</description>
        <label>Donde lo estacionas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Pension ( Estaconamiento )</fullName>
                </value>
                <value>
                    <fullName>Calle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edad_de_conductores_adicionales__c</fullName>
        <description>Campo para evaluación del cliente.</description>
        <label>Edad de conductores adicionales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>16 - 25</fullName>
                </value>
                <value>
                    <fullName>mayor a 25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EdadBeneficiario__c</fullName>
        <label>Edad Beneficiario</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eliminar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eliminar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EG009_dv_MontoAutrizado__c</fullName>
        <description>Monto para la etapa de Sanción editable para el ejecutivo</description>
        <inlineHelpText>Monto para la etapa de Sanción</inlineHelpText>
        <label>Monto de la oportunidad autorizado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EncuestaComparacion__c</fullName>
        <description>¿Cuánto consideras que estás ahorrando con wibe vs tu seguro anterior?</description>
        <inlineHelpText>¿Cuánto consideras que estás ahorrando con wibe vs tu seguro anterior?</inlineHelpText>
        <label>Encuesta comparación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primer Seguro</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>Mas de 30%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encuestado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para cotización.</description>
        <label>Encuestado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviarCorreoCumpleanios__c</fullName>
        <description>Campo para cotización.</description>
        <label>Enviar correo de cumpleaños</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enviar a informe</fullName>
                </value>
                <value>
                    <fullName>Enviado desde MKT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnviarCorreoSkipPayment__c</fullName>
        <label>Enviar correo Skip Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnviarCTI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se hace validación, si fue verdadera envia a closed de CTI para dar atención.</description>
        <label>Enviar a CTI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviarMultiAsistencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar a MultiAsistencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviarPolizaporemail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar Póliza por email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnvioEncuestaCancelacion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cotización, se hizo envío de encuesta de cancelación.</description>
        <label>Se envió encuesta de cancelación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnvioVITDireccionPoliza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Envio de VIT a dirección asociada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EQUIVOCADO_INCORRECTO__c</fullName>
        <description>Numero marcado equivocado o incorrecto</description>
        <label>Equivocado Incorrecto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTRO NEGOCIO</fullName>
                </value>
                <value>
                    <fullName>OTRA ASEGURADORA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Esta_usando_el_dispositivo__c</fullName>
        <description>Permite identificar si el cliente esta usando el dispositvo, proceso de cool drive</description>
        <label>Esta usando el dispositivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstadoBenef__c</fullName>
        <label>estado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstadoCliente__c</fullName>
        <description>Campo con información del asegurado.</description>
        <label>Estado Asegurado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <description>Estatus de la cotización.</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creada</fullName>
                </value>
                <value>
                    <fullName>Tarificada</fullName>
                </value>
                <value>
                    <fullName>Formalizada</fullName>
                </value>
                <value>
                    <fullName>Emitida</fullName>
                </value>
                <value>
                    <fullName>Cobrada</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESTATUS_CLIPERT__c</fullName>
        <description>Estatus clipert de la cotización.</description>
        <label>Estatus Clipert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVA</fullName>
                </value>
                <value>
                    <fullName>ANULADA</fullName>
                </value>
                <value>
                    <fullName>CANCELADA</fullName>
                </value>
                <value>
                    <fullName>INCLUIDA</fullName>
                </value>
                <value>
                    <fullName>VIGENTE CON MODIFICACIONES</fullName>
                </value>
                <value>
                    <fullName>CANCELACION PRE EMISION</fullName>
                </value>
                <value>
                    <fullName>VIGENTE CON RENOVACION</fullName>
                </value>
                <value>
                    <fullName>VALIDA</fullName>
                </value>
                <value>
                    <fullName>EN TRAMITE</fullName>
                </value>
                <value>
                    <fullName>RECHAZADA</fullName>
                </value>
                <value>
                    <fullName>RECHAZADA POR VENTANILLA</fullName>
                </value>
                <value>
                    <fullName>RECHAZADA POR SUSCRIPCION</fullName>
                </value>
                <value>
                    <fullName>RECHAZADA POR DOCUMENTO</fullName>
                </value>
                <value>
                    <fullName>RECHAZADA POR CUESTIONARIO</fullName>
                </value>
                <value>
                    <fullName>FORMALIZADA</fullName>
                </value>
                <value>
                    <fullName>COBRADA</fullName>
                </value>
                <value>
                    <fullName>EMITIDA</fullName>
                </value>
                <value>
                    <fullName>SALVO BUEN COBRO</fullName>
                </value>
                <value>
                    <fullName>EMISION CON ERROR</fullName>
                </value>
                <value>
                    <fullName>ACEPTADA POR SUSCRIPCION</fullName>
                </value>
                <value>
                    <fullName>ACEPTADA POR SUSCRIPCION CON ENDOSO</fullName>
                </value>
                <value>
                    <fullName>EXCLUIDA</fullName>
                </value>
                <value>
                    <fullName>RESCATADA</fullName>
                </value>
                <value>
                    <fullName>DOTAL</fullName>
                </value>
                <value>
                    <fullName>TARIFICADA</fullName>
                </value>
                <value>
                    <fullName>PENDIENTE EMISION</fullName>
                </value>
                <value>
                    <fullName>EN REVISIÓN</fullName>
                </value>
                <value>
                    <fullName>MODIFICADA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTL_BanderaOpp__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Campo que nos indica si la oportunidad es nueva y sirve de control para componente ProductForm</description>
        <label>Bandera Oportunidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTL_Familia__c</fullName>
        <description>Listado de familia de productos</description>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Captación</fullName>
                </value>
                <value>
                    <fullName>Colocación</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTL_Producto__c</fullName>
        <description>Listado de los productos dependientes de la familia seleccionada en la oportunidad</description>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_RTL_Familia__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta en Dólares</fullName>
                </value>
                <value>
                    <fullName>Fondos de Inversión</fullName>
                </value>
                <value>
                    <fullName>Maestra Patrimonial Dólares</fullName>
                </value>
                <value>
                    <fullName>Membresía BP</fullName>
                </value>
                <value>
                    <fullName>Nómina</fullName>
                </value>
                <value>
                    <fullName>Portabilidad</fullName>
                </value>
                <value>
                    <fullName>Producto 21</fullName>
                </value>
                <value>
                    <fullName>MLB</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Consumo</fullName>
                </value>
                <value>
                    <fullName>Hipotecario</fullName>
                </value>
                <value>
                    <fullName>TDC</fullName>
                </value>
                <value>
                    <fullName>PrePaid Forward</fullName>
                </value>
                <value>
                    <fullName>Collares</fullName>
                </value>
                <value>
                    <fullName>Alertas</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Domiciliaciones</fullName>
                </value>
                <value>
                    <fullName>Servicios No Financieros</fullName>
                </value>
                <value>
                    <fullName>Traspaso Patrimonial</fullName>
                </value>
                <value>
                    <fullName>One Team</fullName>
                </value>
                <value>
                    <fullName>Fideicomiso</fullName>
                </value>
                <value>
                    <fullName>Socios Globales</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro</fullName>
                </value>
                <value>
                    <fullName>Gastos Médicos Mayores Indemnizatorio</fullName>
                </value>
                <value>
                    <fullName>Hogar Seguro Plus</fullName>
                </value>
                <value>
                    <fullName>Vida Segura Patrimonial</fullName>
                </value>
                <value>
                    <fullName>Meta Segura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_ContadorRemarcado__c</fullName>
        <description>Contador de remarcados</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contador de llamadas.</inlineHelpText>
        <label>Contador remarcado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistenConductoresAdicionales__c</fullName>
        <description>Campo con información de evaluación del cliente.</description>
        <label>Existen Conductores Adicionales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_Bienvenida__c</fullName>
        <description>Envío de correo de bienvenida.</description>
        <label>Fecha Bienvenida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_entrega_dispositivo__c</fullName>
        <description>Fecha en la que se entrego el dispositivo, proceso de cool drive</description>
        <label>Fecha de entrega dispositivo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ultimo_uso__c</fullName>
        <description>Fecha en la que usado por ultima vez el dispositivo, proceso cool drive</description>
        <label>Fecha de último uso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_verificacion_fisica_exitosa__c</fullName>
        <label>Fecha de verificación física exitosa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Nacimiento__c</fullName>
        <description>Campo fórmula con datos del contratante</description>
        <formula>Account.PersonBirthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de Nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Nacimiento_Contratante__c</fullName>
        <description>Campo para almacenar la fecha de nacimiento del contratante</description>
        <label>Fecha Nacimiento Asegurado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_verificacion_digital_exitosa__c</fullName>
        <label>Fecha verificación digital exitosa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaEmision__c</fullName>
        <description>Fecha de emisión de cotización.</description>
        <label>Fecha de Emisión</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaExpiracionAno__c</fullName>
        <description>Año de expiración de cuenta bancaria.</description>
        <label>Fecha de expiración año</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FechaExpiracionMes__c</fullName>
        <description>Mes de expiración de cuenta bancaria.</description>
        <label>Fecha de expiración mes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FechaFin__c</fullName>
        <description>Este campo servirá para guardar la fecha fin de la aseguradora que tiene el prospecto o cliente en ese momento.</description>
        <label>Fecha Fin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaHoracontacto__c</fullName>
        <description>Campo con información para cotización.</description>
        <label>Fecha y Hora de contacto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FechaInicio__c</fullName>
        <description>Este campo servirá para guardar la fecha de inicio de la aseguradora que el prospecto/cliente contrato.</description>
        <label>Fecha Inicio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaNacCliente__c</fullName>
        <label>Fecha Nac Cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fechasiniestro__c</fullName>
        <label>Fecha de siniestro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaVencimientosegurocompetencia__c</fullName>
        <description>Campo con información de evaluación de cliente.</description>
        <label>Fecha de Vencimiento seguro competencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fechaventa__c</fullName>
        <description>Información para cotización.</description>
        <label>Fecha de la venta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FechaVerificacion__c</fullName>
        <description>Fecha en la que se activo el campo Aplica verificación digital</description>
        <label>Fecha verificación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FI001_fm_Banca_Cliente__c</fullName>
        <description>Banca a la que pertenece el usuario.</description>
        <formula>Text(Owner.VP_ls_Banca__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flujo__c</fullName>
        <inlineHelpText>Flujo, valor de dispersión o facturación</inlineHelpText>
        <label>Flujo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FolioCotizacion__c</fullName>
        <description>Folio para dar seguimiento a la cotización.</description>
        <externalId>true</externalId>
        <label>Folio Cotizacion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolioOC__c</fullName>
        <label>Folio de OC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forma_de_pago__c</fullName>
        <description>Tipo de forma de pago.</description>
        <label>Forma de pago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
                <value>
                    <fullName>Anual a meses sin intereses</fullName>
                </value>
                <value>
                    <fullName>Bimensual</fullName>
                </value>
                <value>
                    <fullName>Cuatrimensual</fullName>
                </value>
                <value>
                    <fullName>Declarativa</fullName>
                </value>
                <value>
                    <fullName>Especial</fullName>
                </value>
                <value>
                    <fullName>A 11 meses</fullName>
                </value>
                <value>
                    <fullName>Ocasional</fullName>
                </value>
                <value>
                    <fullName>Quincenal</fullName>
                </value>
                <value>
                    <fullName>Prima Unica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>